k8s/frontend-react/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: amr-portal-react-nginx
  name: amr-portal-react-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ensembl.platform.app.name: amr-portal-react-nginx
  template:
    metadata:
      labels:
        ensembl.platform.app.name: amr-portal-react-nginx
    spec:
      imagePullSecrets:
        - name: ensemblweb-pull-secret
      containers:
      - image: DOCKER_IMAGE
        imagePullPolicy: Always
        name: amr-portal-react-nginx
        ports:
        - containerPort: 8000
          protocol: TCP
