k8s/frontend-react/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amr-frontend-react-svc
  labels:
    ensembl.platform.app.name: amr-portal-react-nginx
spec:
  selector:
    ensembl.platform.app.name: amr-portal-react-nginx
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
