k8s/frontend-react/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: amr-api-ingress-fe-react
spec:
  ingressClassName: nginx
  rules:
  - host: www.ebi.ac.uk
    http:
      paths:
      - backend:
          service:
            name: amr-frontend-react-svc
            port:
              number: 8000
        path: /amr-react(/|$)(.*)
        pathType: Prefix
